--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
 :root {
-  --color-lightest: #fff4e6;
-  --color-light: #ffe8cc;
-  --color-medium: #ffa94d;
-  --color-dark: #ff922b;
+  --color-lightest: #e6e5e0;
+  --color-light: #c5d1dd;
+  --color-medium: #a4bcd4;
+  --color-dark: #616974;
 }
 
 * {
@@ -36,7 +36,7 @@ body {
 
 .button {
   background-color: var(--color-medium);
-  color: #343a40;
+  color: #393f44;
   padding: 0.8rem 1.2rem;
   border: none;
   border-radius: 7px;
@@ -47,6 +47,7 @@ body {
 
 .button:hover {
   background-color: var(--color-dark);
+  color: #dde3e7;
 }
 
 .sidebar ul {
